--- a/Бизнес идея.md
+++ b/Бизнес идея.md
@@ -25,25 +25,39 @@
 5) Ученики
 6) Учёт финансов
 7) Раздел с домашними заданиями
+8) Страница с настройками
 В качестве дополнительного функционала:
 1) Возможность объединять учеников в группы
 
 ### Авторизация/регистрация
 #### Авторизация
 Для авторизации пользователь должен ввести свою почту и пароль
+**Вопросы:**
+1) Я в процессе авторизации не бум-бум, там же надо какие-то токены сохранять, хуёкены
 #### Регистрация
 Регистрация будет состоять из двух этапов:
 - Ввод почты и пароля
 - Заполнение контактной информации
+**Вопросы:**
+1) Будем ли мы ебаться с проверкой почты?
 ### Посадочный лендинг
 Посадочный лендинг требуется для того, чтобы было, куда вести трафик
+**Вопросы:**
 ### Календарь занятий
 Календарь занятий представляет из себя недельный/месячный календарь, на котором можно добавлять предстоящие занятия с учениками.
+**Вопросы:**
 ### Расписание занятий
 Расписание занятий представляет из себя недельный календарь, в котором можно указать регулярные занятия. В таком случае, данные занятия автоматически будут заполняться в календаре занятий. 
+**Вопросы:**
 ### Ученики
 Ученики - это страница с учениками репетитора
+**Вопросы:**
 ### Учёт финансов
 Учёт финансов - страница, на которой репетитор может отслеживать платежи от учеников
+**Вопросы:**
 ### Раздел с домашними заданиями
 Раздел с домашними заданиями - это страница, на которой репетитор может контролировать процесс выполнения домашних заданий учениками
+**Вопросы:**
+
+### Страница с настройками
+Страница, на которой репетитор сможет инфу о себе поменять, почту, пароль, вся хуйня
